--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,22 @@
             <artifactId>maven-jxr-plugin</artifactId>
             <version>2.5</version>
         </plugin>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-jar-plugin</artifactId>
+            <version>3.2.0</version>
+            <configuration>
+                <outputDirectory>${project.basedir}/jar</outputDirectory>
+                <finalName>SeamCarving</finalName>
+                <archive>
+                    <manifest>
+                        <addClasspath>true</addClasspath>
+                        <classpathPrefix>lib/</classpathPrefix>
+                        <mainClass>Application</mainClass>
+                    </manifest>
+                </archive>
+            </configuration>
+        </plugin>
     </plugins>
     </build>
 </project>
