--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,20 @@
     <plugins>
         <plugin>
             <artifactId>maven-compiler-plugin</artifactId>
+            <executions>
+                <execution>
+                    <id>default-testCompile</id>
+                    <phase>test-compile</phase>
+                    <configuration>
+                        <testExcludes>
+                            <exclude>**/*PerformanceTest.java</exclude>
+                        </testExcludes>
+                    </configuration>
+                    <goals>
+                        <goal>testCompile</goal>
+                    </goals>
+                </execution>
+            </executions>
             <configuration>
                 <source>1.8</source>
                 <target>1.8</target>
